--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Battle Of The Dance</h1>
+    <h1>Surya</h1>
     <img width="200px" src="BAttle of the dance.png" alt="">
     <p>Online Dance Reailty Show</p>
 </body>
