--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Surya</h1>
     <img width="200px" src="BAttle of the dance.png" alt="">
     <p>Online Dance Reailty Show</p>
+    <p>Register Now</p>
 </body>
 </html>
